<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Listado Test 1</string>
    <string name="id">Id</string>
    <string name="title">Título y Afiche</string>
    <string name="year">Año</string>
    <string name="synopsis">Sinopsis</string>
    <string name="director">Director</string>
    <string name="genre">Género</string>
    <string name="rating">Calificación</string>
    <string name="cast">Actores</string>
    <string name="premiere_date">Fecha de Estreno</string>
    <string name="running_time">Duración</string>
    <string name="detail_title">Detalle de la película</string>
    <string name="description_mainlist">Lista de películas</string>
    <string name="test_title">Texto para relleno</string>
    <string name="test_text">Esto es\nrelleno\nrelleno\nrelleno\nrelleno\nrelleno\nrelleno</string>
    <string name="refresh">Actualizar</string>
    <string name="stop">Detener</string>
    <string name="loading">Cargando...</string>
    <string name="main_stopped">La operación ha sido interrumpida</string>
    <string name="main_error">Ha ocurrido un error en la conexión</string>
    <string name="tab_activity">Obtener JSON</string>
    <string name="sql_activity">Ejemplo SQLite</string>
    <string name="new_item">Nuevo</string>
    <string-array name="main_opt_array">
    	<item>Obtener JSON</item>
    	<item>Ejemplo SQLite</item>
    </string-array>
</resources>
