<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:droidfu="http://github.com/droidfu/schema"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<TextView android:layout_width="fill_parent"
		style="?android:attr/listSeparatorTextViewStyle"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/title" 
		android:layout_height="wrap_content"
		></TextView>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<com.github.droidfu.widgets.WebImageView
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:id="@+id/imgPelicula"
			droidfu:autoLoad="false"
			/>		
		<TextView xmlns:android="http://schemas.android.com/apk/res/android"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="10dp" android:id="@+id/txtTitle">
			</TextView>
	</LinearLayout>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="fill_parent"
			style="?android:attr/listSeparatorTextViewStyle"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/director" 
			android:layout_height="wrap_content"
			></TextView>
		<TextView xmlns:android="http://schemas.android.com/apk/res/android"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="10dp" android:id="@+id/txtDirector">
		</TextView>
		<TextView android:layout_width="fill_parent"
			style="?android:attr/listSeparatorTextViewStyle"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/genre" 
			android:layout_height="wrap_content"
			></TextView>
		<TextView xmlns:android="http://schemas.android.com/apk/res/android"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="10dp" android:id="@+id/txtGenre">
		</TextView>
		<TextView android:layout_width="fill_parent"
			style="?android:attr/listSeparatorTextViewStyle"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/rating" 
			android:layout_height="wrap_content"
			></TextView>
		<TextView xmlns:android="http://schemas.android.com/apk/res/android"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="10dp" android:id="@+id/txtRating">
		</TextView>
		<TextView android:layout_width="fill_parent"
			style="?android:attr/listSeparatorTextViewStyle"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/cast" 
			android:layout_height="wrap_content"
			></TextView>
		<TextView xmlns:android="http://schemas.android.com/apk/res/android"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="10dp" android:id="@+id/txtCast">
		</TextView>
		<TextView android:layout_width="fill_parent"
			style="?android:attr/listSeparatorTextViewStyle"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/premiere_date" 
			android:layout_height="wrap_content"
			></TextView>
		<TextView xmlns:android="http://schemas.android.com/apk/res/android"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="10dp" android:id="@+id/txtPremiereDate">
		</TextView>
		<TextView android:layout_width="fill_parent"
			style="?android:attr/listSeparatorTextViewStyle"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/running_time" 
			android:layout_height="wrap_content"
			></TextView>
		<TextView xmlns:android="http://schemas.android.com/apk/res/android"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="10dp" android:id="@+id/txtRunningTime">
		</TextView>
		<TextView android:layout_width="fill_parent"
			style="?android:attr/listSeparatorTextViewStyle"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/test_title" 
			android:layout_height="wrap_content"
			></TextView>
		<TextView xmlns:android="http://schemas.android.com/apk/res/android"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/test_text" 
			android:padding="10dp" android:id="@+id/txtRunningTime">
		</TextView>
	</LinearLayout>
</ScrollView>
</LinearLayout>